# Tools

./: .clang-format  .cmake-format.yaml  .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CPPLINT.cfg  Makefile  README.md  log_config.yaml  pyproject.toml
cmake/: FindCppyy.cmake  FindLibClang.cmake
pkg_templates/: initializor.py  setup.py.in
source/: CMakeLists.txt  Linkdef.h  ToolsConfig.cmake.in  ToolsConfig.hh.in  ToolsConfigVersion.cmake.in
source/inc/: BaseError.hh  DataBase.hh  Display.hh  DualStream.hh  Exception.hh  Math.hh  ProgressBar.hh  Rand.hh  Regex.hh  String.hh  StringUtils.hh  TypeErasure.hh  Vector3.hh  make_unique.hh  oldRand.hh
source/src/: DataBase.cc  DualStream.cc  ProgressBar.cc  String.cc  Vector3.cc
test/: __init__.py  test_BaseError.py  test_Display.py  test_Math.py  test_Vector3.py
