[tool.poetry]
name = "tools"
version = "1.0.0"
description = "Yet another small C++ generic library, extending the standard library for ease of use."
authors = ["jgaffiot <j.gaffiot@laposte.net>"]

[tool.poetry.dependencies]
python = "^3.8"
cppyy = "^2.0.0"

[tool.poetry.dev-dependencies]
cmake-format = "^0.6.13"
PyYAML = "^5.4.1"
pyupgrade = "^2.17.0"
black = "^21.5b1"
flake8 = "^3.9.2"
pytest = "^6.2.4"
cpplint = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38"]
skip-string-normalization = true
exclude = '''
/(
    \.git
  | \.kdev4
  | build
  | install
)/
'''

[tool.pytest.ini_options]
addopts = '''
    -vv
#      -s
    --exitfirst
    --capture=no
    --showlocals
    --black
    --flake8
    --forked
'''
python_files = "*.py"
testpaths = "test"
norecursedirs = '''
    build
    install
'''
# python_classes = TestOf  # to avoid collecting TestMode
# Daily options
#  --failed-first: relaunch all tests but failed tests first
#  --pdb: launch pdb after first fail
#  -k <regex>: launch only test matching the regex
