[tool.poetry]
name = "tools"
version = "1.2.0"
description = "Yet another small C++ generic library, extending the standard library for ease of use."
authors = ["jgaffiot <j.gaffiot@laposte.net>"]

[tool.poetry.dependencies]
python = "^3.8"
cppyy = "*"
clang = "^11.0"

[tool.poetry.dev-dependencies]
cmake-format = "*"
PyYAML = "*"
pyupgrade = "*"
black = "*"
flake8 = "*"
pytest = "*"
cpplint = "*"
ipython = "*"
flake8-bandit = "*"
flake8-black = "*"
flake8-bugbear = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38"]
skip-string-normalization = true
exclude = '''
/(
    \.git
  | \.kdev4
  | build
  | install
)/
'''

[tool.pytest.ini_options]
addopts = '''
    -vv
    --exitfirst
    --capture=no
    --showlocals
'''
#      -s
#     --black
#     --flake8
#     --forked
python_files = "*.py"
testpaths = "test"
norecursedirs = '''
    build
    install
'''
# python_classes = TestOf  # to avoid collecting TestMode
# Daily options
#  --failed-first: relaunch all tests but failed tests first
#  --pdb: launch pdb after first fail
#  -k <regex>: launch only test matching the regex
